fix overlapping of text in legends

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 text {
-  font-size : 14px;
+  font-size : 11px;
 }
 path {
   stroke-linejoin: round;
